@@ -34,6 +34,10 @@ PHP                                                                        NEWS
   . Fixed bug #69203 (FILTER_FLAG_STRIP_HIGH doesn't strip ASCII 127). (Jeff
     Welch)
 
+- Opcache:
+  . Fixed bug #69297 (function_exists strange behavior with OPCache on
+    disabled function). (Laruence)
+
 - OpenSSL
   . Fixed bugs #68853, #65137 (Buffered crypto stream data breaks IO polling
     in stream_select() contexts) (Chris Wright)
